# backend_take_home_assessment

./: .gitignore  README.md
updated_backend_take_home_assessment/: PROBLEM.md
updated_backend_take_home_assessment/boilerplate/: README.md  pyproject.toml
updated_backend_take_home_assessment/stock_api/: Makefile  pyproject.toml
updated_backend_take_home_assessment/stock_api/src/stock_api/: app.py  client.py  route.py  service.py
updated_backend_take_home_assessment/stock_api/tests/: test_app.py
