[tool.poetry]
name = "TODO"
version = "0.1.0"
description = "TODO"
authors = ["First Last <your@email.com>"]
readme = "README.md"
# TODO: Rename the package/directory.
packages = [{include = "boilerplate", from = "src"}]

[tool.poetry.dependencies]
python = "~3.12.1"
fastapi = "^0.109.1"
uvicorn = "^0.30.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
